Updating binder links

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Assignment\n",
-    "You may submit the work as a group. Please submit all code and plots for Question 3 for full credit either using screenshots or as a PDF. Email the instructor (bekah@umd.edu) if you have any questions.\n",
+    "\n",
+    "Due date: Dec 2, 2022 6p\n",
+    "\n",
+    "You may submit the work as a group. Please submit all code and plots for Question 3 for full credit either using screenshots or as a PDF. Email the instructor your answers (bekah@umd.edu) and feel free to ask questions. \n",
     "\n",
     "IMPORTANT! If you are using binder, the notebook can timeout after 10-15 mins of inactivity. If you need to step away, download/save your work!\n",
     "\n",
@@ -15,14 +18,14 @@
     "\n",
     "* Cloud-free\n",
     "* Dark rainforest\n",
-    "* Stratospheric Ozone\n",
+    "* Stratospheric ozone (hint ozone absorbs shortwave radiation)\n",
     "* The sun is directly overhead\n",
     "* The local time is midnight\n",
     "* Thin cirrus clouds\n",
     "\n",
-    "3. Using the template below as a guide, create a plot of *DSR* ('ABI-L2-RSRF') on a different day. Refer to the original tutorial to fill in the missing portions. [40 pts]\n",
+    "3. Using the template below as a guide, create a plot of *DSR* ('ABI-L2-DSRF') on a Nov 22, 2022 at 18:00 UTC. Refer to the original tutorial to fill in the missing portions. [40 pts]\n",
     "\n",
-    "4. Annotate the plot using paint or another editor to identify why three features have high and low measurements of DSR. [15 pts]\n"
+    "4. Identify the high/low measurements of DSR in your plot and speculate what atmospheric features could be causing these values. [15 pts]\n"
    ]
   },
   {
@@ -87,7 +90,7 @@
    "outputs": [],
    "source": [
     "# Open adn then read the file\n",
-    "# Note: you'll have to inspect the contents and find the rsr variable\n",
+    "# Note: you'll have to inspect the contents and find the DSR variable\n",
     "remote_obj = fs.open(files[0], mode='rb')\n",
     "abi_L2 = xr.open_dataset(remote_obj, engine='h5netcdf')"
    ]
