Clear output, edit typos

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -8,22 +8,27 @@
     "\n",
     "Due date: Dec 2, 2022 6p\n",
     "\n",
-    "You may submit the work as a group. Please submit all code and plots for Question 3 for full credit either using screenshots or as a PDF. Email the instructor your answers (bekah@umd.edu) and feel free to ask questions. \n",
+    "You may submit the assignment as individuals or in a group of up to four. Please ensure you are contributing equally. Questions 1, 2, and 4 can be typed up. Please submit both code and plots for Question 3 for full credit using one of the following:\n",
     "\n",
-    "IMPORTANT! If you are using binder, the notebook can timeout after 10-15 mins of inactivity. If you need to step away, download/save your work!\n",
+    "* .ipynb file or a .py file along with screenshots\n",
+    "* Word Document or PDF with code/screenshots\n",
     "\n",
-    "1. Overexposure to sunlight is [damaging to coral reefs](https://aambpublicoceanservice.blob.core.windows.net/oceanserviceprod/facts/coralbleaching-large.jpg). Which is more important for monitoring coral reefs, RSR or DSR? Why? [10 pts]\n",
+    "Email the instructor your answers (bekah@umd.edu) by the due date. Feel free to ask questions!\n",
     "\n",
-    "2. What impact will the following have on an RSR value and why? [35 pts]\n",
+    "IMPORTANT! If you are using binder, the code is not saved! The notebook will timeout after 10-15 mins of inactivity. Download/save your code after you have completed the assignment or if you want to step away.\n",
     "\n",
-    "* Cloud-free\n",
-    "* Dark rainforest\n",
-    "* Stratospheric ozone (hint ozone absorbs shortwave radiation)\n",
-    "* The sun is directly overhead\n",
-    "* The local time is midnight\n",
-    "* Thin cirrus clouds\n",
+    "1. Overexposure to sunlight is [damaging to coral reefs](https://aambpublicoceanservice.blob.core.windows.net/oceanserviceprod/facts/coralbleaching-large.jpg). Which is more valuable for monitoring coral reefs, Reflected Shortwave Radiation (RSR), Downward Shortwave Radiation (DSR), or Outgoing Longwave Radiation (OLR)? Why? [10 pts]\n",
     "\n",
-    "3. Using the template below as a guide, create a plot of *DSR* ('ABI-L2-DSRF') on a Nov 22, 2022 at 18:00 UTC. Refer to the original tutorial to fill in the missing portions. [40 pts]\n",
+    "2. If you are interpreting an RSR image from GOES-16, do you expect the following conditions to cause lower or higher RSR values? Why? [35 pts]\n",
+    "* The region is cloud-free\n",
+    "* The underlying surface is a dense and dark rainforest\n",
+    "* A significant amount of stratospheric ozone is present (hint ozone absorbs shortwave radiation)\n",
+    "* The sun is directly overhead in a region\n",
+    "* The local time is midnight in the western hemisphere\n",
+    "* There is a thin layer of cirrus clouds covering the scene\n",
+    "\n",
+    "\n",
+    "3. Using the template below as a guide, create a plot of Downward Shortwave Radiation __DSR__ ('ABI-L2-DSRF') on a Nov 22, 2022 at 18:00 UTC. Refer to the original tutorial to fill in the missing portions. [40 pts]\n",
     "\n",
     "4. Identify the high/low measurements of DSR in your plot and speculate what atmospheric features could be causing these values. [15 pts]\n"
    ]
