added new instructions, will continue to do so

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1831,6 +1831,7 @@
    ],
    "source": [
     "# Read\n",
+    "# TODO This fails with a mysterious runtime error... TODO FIX\n",
     "abi_L2_RSR = xr.open_dataset(remote_obj, engine='h5netcdf')\n",
     "abi_L2_RSR"
    ]
