--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -140,7 +140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 ('notebook_demo')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -154,9 +154,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "4589143d4cda0c8671911bd60c16dc1d10ec327722e7574bc882b745b51509b4"
@@ -164,5 +163,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
